# gl-projects

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/cached/scene/classic-cornell-box/: classic-cornell-box.mtl  classic-cornell-box.xml
assets/cached/scene/cornell-box/: cornell-box.mtl
assets/scene/: cornell-box.json  cornell-box.mtl
assets/scene/example-scenes-cg23/: README.md
assets/scene/example-scenes-cg23/bathroom/: bathroom.mtl  bathroom.xml
assets/scene/example-scenes-cg23/cornell-box/: cornell-box.mtl
assets/scene/example-scenes-cg23/veach-mis/: veach-mis.mtl  veach-mis.xml
assets/scene/fruit/: fruit.xml
assets/scene/moss/: moss.xml
brep/: CMakeLists.txt  README.md
brep/include/brep/: brep_state.hpp  brep_system.hpp  brep_ui.hpp
brep/include/dataop/: graph.hpp  instances.hpp  operation.hpp
brep/include/draw/: draw.hpp
brep/include/graph/: edge.hpp  face.hpp  half_edge.hpp  loop.hpp  point.hpp  self_linked.hpp  solid.hpp  util.inl  vertex.hpp
brep/src/: main.cpp
brep/src/brep/: brep_system.cpp  brep_ui.cpp
brep/src/dataop/: instances.cpp  operation.cpp
brep/src/draw/: draw.cpp
brep/src/graph/: edge.cpp  face.cpp  half_edge.cpp  loop.cpp  point.cpp  solid.cpp  vertex.cpp
docs/: gl_dsa.md
docs/brep/: 欧拉-庞加莱公式.md
docs/rasterize/: hiz.md
nurbs/: CMakeLists.txt  README.md
nurbs/include/algorithm/: skinning.hpp
nurbs/include/data/: data.hpp
nurbs/include/draw/: draw.hpp  scene.hpp
nurbs/include/nurbs/: nurbs_state.hpp  nurbs_system.hpp  nurbs_ui.hpp
nurbs/src/: main.cpp
nurbs/src/data/: data.cpp
nurbs/src/draw/: draw.cpp  scene.cpp
nurbs/src/nurbs/: nurbs_system.cpp  nurbs_ui.cpp
particle/: CMakeLists.txt  README.md
particle/include/particle/: particle_state.hpp  particle_system.hpp  particle_ui.hpp
particle/src/: main.cpp
particle/src/particle/: particle_system.cpp  particle_ui.cpp
pathtrace/: CMakeLists.txt  README.md
pathtrace/include/geometry/: bounding_box.hpp  hittable.hpp  primitive.hpp  triangle.hpp
pathtrace/include/light/: area_light.hpp  area_light_group.hpp  emissive.hpp  emissive_group.hpp  hit_record.hpp  ray.hpp  triangular_area_light.hpp
pathtrace/include/material/: glass_material.hpp  material.hpp  phong_material.hpp  texture.hpp  texture_rgb_f.hpp
pathtrace/include/pathtrace/: pathtrace_state.hpp  pathtrace_system.hpp  pathtrace_ui.hpp
pathtrace/include/scene/: bounding_box.hpp  bvh.hpp  bvh_node.hpp  model.hpp  pinhole_camera.hpp  scene.hpp  screen_buffer.hpp
pathtrace/src/: main.cpp
pathtrace/src/geometry/: bounding_box.cpp  triangle.cpp
pathtrace/src/light/: area_light.cpp  area_light_group.cpp  emissive_group.cpp  triangular_area_light.cpp
pathtrace/src/material/: glass_material.cpp  phong_material.cpp  texture_rgb_f.cpp
pathtrace/src/pathtrace/: pathtrace_system.cpp  pathtrace_ui.cpp
pathtrace/src/scene/: bounding_box.cpp  bvh.cpp  bvh_node.cpp  model.cpp  pinhole_camera.cpp  scene.cpp  screen_buffer.cpp
rasterize/: CMakeLists.txt  README.md
rasterize/include/draw/: draw.hpp
rasterize/include/rasterize/: rasterize_state.hpp  rasterize_system.hpp  rasterize_ui.hpp
rasterize/include/scene/: bounding_box.hpp  model.hpp  scene.hpp  triangle.hpp
rasterize/include/zbuffer/: color.hpp  zbuffer.hpp  zbuffer_node.hpp  zbuffer_pixel.hpp
rasterize/src/: main.cpp
rasterize/src/rasterize/: rasterize_system.cpp  rasterize_ui.cpp
rasterize/src/scene/: bounding_box.cpp  model.cpp  scene.cpp  triangle.cpp
rasterize/src/zbuffer/: zbuffer.cpp  zbuffer_node.cpp  zbuffer_pixel.cpp
renderer/: CMakeLists.txt  README.md
renderer/include/camera/: camera.hpp  first_person_camera.hpp  orbit_camera.hpp
renderer/include/glh/: file_io.hpp  gl_buffer.hpp  gl_texture2d.hpp  img_output.hpp  model.hpp  pipeline.hpp  program.hpp  resource.hpp
renderer/include/util/: cpu_timer.hpp  math.hpp  math.inl  progress_percentage.hpp  random.hpp  types.hpp
renderer/include/window/: screen_capturer.hpp  window.hpp
renderer/src/: main.cpp
renderer/src/camera/: camera.cpp  first_person_camera.cpp  orbit_camera.cpp
renderer/src/glh/: gl_buffer.cpp  gl_texture2d.cpp  img_output.cpp  model.cpp  pipeline.cpp  program.cpp  resource.cpp
renderer/src/util/: cpu_timer.cpp  math.cpp  progress_percentage.cpp  random.cpp
renderer/src/window/: screen_capturer.cpp  window.cpp
shaders/display/: display.frag  display.vert
shaders/particle/: compact.comp  draw.frag  draw.vert  emit.comp  particle.glsl  scan1.comp  scan2.comp  scan3.comp  update.comp
shaders/plain/: one_color.frag  plain.frag  plain.vert
shaders/utils/: constant.glsl  rand.glsl  sample.glsl
